--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "react": "^16.4.1"
   },
   "dependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-load-script": "0.0.6",
     "react-measure": "^2.1.2",
-    "webpack": "^2.6.1"
+    "webpack": "^4.44.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -36,13 +36,14 @@
     "email": "karl@outerlabs.io"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "@babel/cli": "^7.11.6",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.5.1",
-    "css-loader": "^0.28.11",
-    "style-loader": "^0.21.0"
+    "css-loader": "^4.3.0",
+    "style-loader": "^0.21.0",
+    "webpack-cli": "^3.3.12"
   }
 }
